<resources>
    <string name="app_name">GitHub Browser</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_user">Search users</string>
    <string name="menu_repo">Search repos</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="user_profile_picture_desc">Profile picture</string>
    <string name="default_username">Username</string>
    <string name="default_organization">Organization</string>
    <string name="user_load_error">Can not load user info.</string>
    <string name="repo_load_error">Can not load repo info.</string>
    <string name="default_bio">Bio</string>
    <string name="default_location">Location</string>
    <string name="user_hierable">Hireable!</string>
    <string name="default_real_name">(Real Name)</string>
    <string name="default_followers">0 followers</string>
    <string name="default_followings">0 followings</string>
    <string name="default_public_repositories">0 public repositories</string>
    <string name="default_repository_name">Repository name</string>
    <string name="default_repository_description">Repository description</string>
    <string name="default_language">Language</string>
    <string name="updated_at">Updated %s</string>
    <string name="owner_repo_separator">/</string>
    <string name="following_button_content_desc">Following button</string>
    <string name="follow_repo_icon_description">Follow repo icon</string>
    <string name="default_filename">filename.txt</string>
    <string name="default_filesize">1 MB</string>
    <string name="default_open_issues">0 open issues</string>
    <string name="default_forks">0 forks</string>
    <string name="search_button_text">Search</string>
    <string name="username_search_hint">Search a username …</string>
    <string name="repo_search_hint">Search a repository …</string>
    <string name="issue_number">#%d</string>
    <string name="default_issue_title">Title of issue</string>
    <string name="default_issue_state">(Open)</string>
    <string name="issue_by">by</string>
    <string name="default_comments_count">0 comments</string>
    <string name="issue_state_closed">(Closed)</string>
    <string name="issue_state_open">(Open)</string>
    <string name="default_comment">Comment</string>
    <string name="add_issue_content_desc">Add new issue</string>
    <string name="add_issue_comment_content_desc">Add new issue comment</string>
    <string name="issue_input_placeholder">Write your issue here …</string>
    <string name="issue_title_input_placeholder">Write issue title here …</string>
    <string name="send_button_text">Send</string>
    <string name="add_issue_comment_placeholder">Write your comment here …</string>
    <plurals name="profile_page_public_repositories">
        <item quantity="one">%d public repository</item>
        <item quantity="other">%d public repositories</item>
    </plurals>
    <plurals name="profile_page_followers">
        <item quantity="one">%d follower</item>
        <item quantity="other">%d followers</item>
    </plurals>
    <plurals name="profile_page_following">
        <item quantity="one">%d following</item>
        <item quantity="other">%d followings</item>
    </plurals>
    <plurals name="repo_page_open_issues">
        <item quantity="one">%d open issue</item>
        <item quantity="other">%d open issues</item>
    </plurals>
    <plurals name="repo_page_forks">
        <item quantity="one">%d fork</item>
        <item quantity="other">%d forks</item>
    </plurals>
    <plurals name="issue_comments">
        <item quantity="one">%d comment</item>
        <item quantity="other">%d comments</item>
    </plurals>
</resources>