<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?selectableItemBackground">

    <TextView
        android:id="@+id/issue_browse_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:text="@string/default_issue_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/issue_browse_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/issue_browse_title"
        android:layout_marginTop="3sp"
        tools:text="@string/issue_number"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/issue_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/issue_browse_title"
        android:layout_toEndOf="@+id/issue_browse_number"
        android:layout_marginTop="3sp"
        android:layout_marginStart="3sp"
        android:text="@string/issue_by" />

    <TextView
        android:id="@+id/issue_browse_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/issue_by"
        android:layout_below="@+id/issue_browse_title"
        android:layout_marginTop="3sp"
        android:layout_marginStart="3sp"
        tools:text="@string/default_username"/>

    <TextView
        android:id="@+id/issue_browse_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/default_comments_count"
        android:layout_toEndOf="@+id/issue_browse_username"
        android:layout_below="@+id/issue_browse_title"
        android:layout_marginTop="3sp"
        android:layout_marginStart="@dimen/activity_horizontal_margin" />

    <TextView
        android:id="@+id/issue_browse_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/issue_browse_comments"
        android:layout_below="@id/issue_browse_title"
        android:layout_marginTop="3sp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        tools:text="@string/default_issue_state"/>

</RelativeLayout>