<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    tools:context=".issue.AddIssueFragment">

    <TextView
        android:id="@+id/add_issue_repo_owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_username"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/add_issue_owner_repo_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/add_issue_repo_owner"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:text="@string/owner_repo_separator"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/add_issue_repo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/add_issue_owner_repo_separator"
        android:text="@string/default_repository_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:clickable="true"/>

    <EditText
        android:id="@+id/add_issue_title_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_issue_repo_name"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/issue_title_input_placeholder"/>

    <EditText
        android:id="@+id/add_issue_body_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_issue_title_input"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:inputType="textMultiLine"
        android:lines="6"
        android:scrollbars="vertical"
        android:hint="@string/issue_input_placeholder" />

    <Button
        android:id="@+id/add_issue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_button_text"
        android:layout_below="@+id/add_issue_body_input"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>