<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    tools:context=".repo.page.RepoPageFragment">

    <TextView
        android:id="@+id/repo_owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_username"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:clickable="true"/>

    <TextView
        android:id="@+id/owner_repo_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/repo_owner"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:text="@string/owner_repo_separator"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/repo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/owner_repo_separator"
        android:text="@string/default_repository_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <ImageView
        android:id="@+id/repo_page_follow_ic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/ic_star_outline"
        android:contentDescription="@string/follow_repo_icon_description"
        android:clickable="true" />

    <TextView
        android:id="@+id/repo_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/repo_name"
        android:layout_marginTop="3sp"
        android:text="@string/default_repository_description"
        android:textStyle="italic"/>

    <ImageView
        android:id="@+id/repo_language_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/repo_desc"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:srcCompat="@drawable/ic_repo" />

    <TextView
        android:id="@+id/repo_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/repo_language_icon"
        android:layout_alignTop="@+id/repo_language_icon"
        android:layout_marginStart="3sp"
        android:text="@string/default_language" />

    <TextView
        android:id="@+id/repo_open_issues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/repo_language"
        android:layout_marginTop="6sp"
        android:text="@string/default_open_issues"
        android:textColor="@color/colorAccent"
        android:clickable="true" />

    <TextView
        android:id="@+id/repo_forks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/repo_language"
        android:layout_toEndOf="@+id/repo_open_issues"
        android:layout_marginTop="6sp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/default_forks"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/repo_page_files_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/repo_forks"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        tools:listitem="@layout/file_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

</RelativeLayout>