<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/nav_profile_pic_horizontal_padding"
    tools:context=".user.page.UserPageFragment"
    android:id="@+id/user_page_fragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_page_picture"
        android:layout_width="@dimen/nav_profile_pic_width"
        android:layout_height="@dimen/nav_profile_pic_height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:srcCompat="@drawable/ic_profile" />

    <TextView
        android:id="@+id/profile_page_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/default_username"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_toEndOf="@+id/profile_page_picture"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/profile_page_realname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/default_real_name"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="3dp"
        android:layout_toEndOf="@+id/profile_page_username"
        android:textSize="18sp"
        android:textStyle="italic"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/profile_page_organization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/default_organization"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_toEndOf="@+id/profile_page_picture"
        android:layout_below="@+id/profile_page_username"/>

    <TextView
        android:id="@+id/profile_page_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/default_location"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_toEndOf="@+id/profile_page_picture"
        android:layout_below="@+id/profile_page_organization"/>

    <TextView
        android:id="@+id/profile_page_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/default_bio"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_toEndOf="@+id/profile_page_picture"
        android:layout_below="@+id/profile_page_location"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/profile_page_hireable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_page_picture"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        tools:text="@string/user_hierable"
        android:textStyle="bold"
        android:textColor="@color/colorGreen" />

    <TextView
        android:id="@+id/profile_page_public_repos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_page_hireable"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        tools:text="@string/default_public_repositories"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/profile_page_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_page_hireable"
        android:layout_toEndOf="@+id/profile_page_public_repos"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        tools:text="@string/default_followers"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/profile_page_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_page_hireable"
        android:layout_toEndOf="@id/profile_page_followers"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        tools:text="@string/default_followings"
        android:textStyle="italic"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_page_repo_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/profile_page_public_repos"
        tools:listitem="@layout/repo_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

</RelativeLayout>