<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    >
    <TextView
        android:id="@+id/repo_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/default_repository_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/repo_item_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/repo_item_name"
        android:layout_alignParentEnd="true"
        tools:text="@string/updated_at"/>

    <TextView
        android:id="@+id/repo_item_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/repo_item_name"
        tools:text="@string/default_repository_description"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/repo_item_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/repo_item_desc"
        android:drawablePadding="3sp"
        android:layout_centerVertical="true"
        tools:text="@string/default_language"
        app:drawableStartCompat="@drawable/ic_repo" />

</RelativeLayout>