<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    tools:context=".issue.IssuePageFragment">

    <TextView
        android:id="@+id/issue_page_repo_owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/default_username"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/issue_page_owner_repo_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/issue_page_repo_owner"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:text="@string/owner_repo_separator"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/issue_page_repo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/issue_page_owner_repo_separator"
        tools:text="@string/default_repository_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:clickable="true"/>

    <TextView
        android:id="@+id/issue_page_issue_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/issue_page_repo_name"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        tools:text="@string/issue_number"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/issue_page_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/issue_page_repo_name"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        tools:listitem="@layout/issue_comment_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/issue_page_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_add"
        android:contentDescription="@string/add_issue_comment_content_desc" />
</RelativeLayout>