<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_header"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:paddingTop="@dimen/nav_header_padding_top"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_picture"
        android:layout_width="@dimen/nav_profile_pic_width"
        android:layout_height="@dimen/nav_profile_pic_height"
        android:paddingRight="@dimen/nav_profile_pic_horizontal_padding"
        android:paddingLeft="@dimen/nav_profile_pic_horizontal_padding"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:contentDescription="@string/user_profile_picture_desc"
        app:srcCompat="@mipmap/ic_launcher_round"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/default_username"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_toEndOf="@+id/profile_picture"
        android:layout_marginStart="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/organization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/profile_picture"
        android:layout_below="@+id/username"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/default_organization"/>

</RelativeLayout>