<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    tools:context=".issue.IssueBrowseFragment">

    <TextView
        android:id="@+id/issue_browse_repo_owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_username"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/issue_browse_owner_repo_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/issue_browse_repo_owner"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:text="@string/owner_repo_separator"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/issue_browse_repo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/issue_browse_owner_repo_separator"
        android:text="@string/default_repository_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:clickable="true"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/issue_browse_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/issue_browse_repo_name"
        tools:listitem="@layout/issue_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />

</RelativeLayout>